// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adminpanel test panel renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AdminPanel />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          panel admina
        </h2>,
        <form>
          <div
            className="form-group"
          >
            <input
              className="form-control"
              id="name"
              name="name"
              placeholder="Nazwa książki"
              type="text"
            />
          </div>
          <div
            className="form-group"
          >
            <input
              className="form-control"
              id="author"
              name="author"
              placeholder="Autor książki"
              type="text"
            />
          </div>
          <div
            className="form-group"
          >
            <textarea
              className="form-control"
              id="description"
              name="description"
              placeholder="Opis książki"
            />
          </div>
          <div
            className="form-group"
          >
            <input
              className="form-check-input"
              id="onStock"
              name="onStock"
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="bookOnStock"
            >
              Na stanie
            </label>
          </div>
          <div
            className="form-group"
          >
            <textarea
              className="form-control"
              id="image"
              name="image"
              placeholder="Zdjęcie książki"
            />
          </div>
          <button
            className="btn btn-primary"
            type="submit"
          >
            Dodaj
          </button>
        </form>,
        "fgdfg",
      ],
      "className": "adminpanel col-md-4",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "panel admina",
        },
        "ref": null,
        "rendered": "panel admina",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="name"
                name="name"
                placeholder="Nazwa książki"
                type="text"
              />
            </div>,
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="author"
                name="author"
                placeholder="Autor książki"
                type="text"
              />
            </div>,
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="description"
                name="description"
                placeholder="Opis książki"
              />
            </div>,
            <div
              className="form-group"
            >
              <input
                className="form-check-input"
                id="onStock"
                name="onStock"
                type="checkbox"
              />
              <label
                className="form-check-label"
                htmlFor="bookOnStock"
              >
                Na stanie
              </label>
            </div>,
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="image"
                name="image"
                placeholder="Zdjęcie książki"
              />
            </div>,
            <button
              className="btn btn-primary"
              type="submit"
            >
              Dodaj
            </button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                className="form-control"
                id="name"
                name="name"
                placeholder="Nazwa książki"
                type="text"
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "name",
                "name": "name",
                "placeholder": "Nazwa książki",
                "type": "text",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                className="form-control"
                id="author"
                name="author"
                placeholder="Autor książki"
                type="text"
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "author",
                "name": "author",
                "placeholder": "Autor książki",
                "type": "text",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <textarea
                className="form-control"
                id="description"
                name="description"
                placeholder="Opis książki"
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "description",
                "name": "description",
                "placeholder": "Opis książki",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form-check-input"
                  id="onStock"
                  name="onStock"
                  type="checkbox"
                />,
                <label
                  className="form-check-label"
                  htmlFor="bookOnStock"
                >
                  Na stanie
                </label>,
              ],
              "className": "form-group",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-check-input",
                  "id": "onStock",
                  "name": "onStock",
                  "type": "checkbox",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Na stanie",
                  "className": "form-check-label",
                  "htmlFor": "bookOnStock",
                },
                "ref": null,
                "rendered": "Na stanie",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <textarea
                className="form-control"
                id="image"
                name="image"
                placeholder="Zdjęcie książki"
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "image",
                "name": "image",
                "placeholder": "Zdjęcie książki",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Dodaj",
              "className": "btn btn-primary",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Dodaj",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "fgdfg",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            panel admina
          </h2>,
          <form>
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="name"
                name="name"
                placeholder="Nazwa książki"
                type="text"
              />
            </div>
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="author"
                name="author"
                placeholder="Autor książki"
                type="text"
              />
            </div>
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="description"
                name="description"
                placeholder="Opis książki"
              />
            </div>
            <div
              className="form-group"
            >
              <input
                className="form-check-input"
                id="onStock"
                name="onStock"
                type="checkbox"
              />
              <label
                className="form-check-label"
                htmlFor="bookOnStock"
              >
                Na stanie
              </label>
            </div>
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="image"
                name="image"
                placeholder="Zdjęcie książki"
              />
            </div>
            <button
              className="btn btn-primary"
              type="submit"
            >
              Dodaj
            </button>
          </form>,
          "fgdfg",
        ],
        "className": "adminpanel col-md-4",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "panel admina",
          },
          "ref": null,
          "rendered": "panel admina",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="form-group"
              >
                <input
                  className="form-control"
                  id="name"
                  name="name"
                  placeholder="Nazwa książki"
                  type="text"
                />
              </div>,
              <div
                className="form-group"
              >
                <input
                  className="form-control"
                  id="author"
                  name="author"
                  placeholder="Autor książki"
                  type="text"
                />
              </div>,
              <div
                className="form-group"
              >
                <textarea
                  className="form-control"
                  id="description"
                  name="description"
                  placeholder="Opis książki"
                />
              </div>,
              <div
                className="form-group"
              >
                <input
                  className="form-check-input"
                  id="onStock"
                  name="onStock"
                  type="checkbox"
                />
                <label
                  className="form-check-label"
                  htmlFor="bookOnStock"
                >
                  Na stanie
                </label>
              </div>,
              <div
                className="form-group"
              >
                <textarea
                  className="form-control"
                  id="image"
                  name="image"
                  placeholder="Zdjęcie książki"
                />
              </div>,
              <button
                className="btn btn-primary"
                type="submit"
              >
                Dodaj
              </button>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  className="form-control"
                  id="name"
                  name="name"
                  placeholder="Nazwa książki"
                  type="text"
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "name",
                  "name": "name",
                  "placeholder": "Nazwa książki",
                  "type": "text",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  className="form-control"
                  id="author"
                  name="author"
                  placeholder="Autor książki"
                  type="text"
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "author",
                  "name": "author",
                  "placeholder": "Autor książki",
                  "type": "text",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <textarea
                  className="form-control"
                  id="description"
                  name="description"
                  placeholder="Opis książki"
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "description",
                  "name": "description",
                  "placeholder": "Opis książki",
                },
                "ref": null,
                "rendered": null,
                "type": "textarea",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form-check-input"
                    id="onStock"
                    name="onStock"
                    type="checkbox"
                  />,
                  <label
                    className="form-check-label"
                    htmlFor="bookOnStock"
                  >
                    Na stanie
                  </label>,
                ],
                "className": "form-group",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form-check-input",
                    "id": "onStock",
                    "name": "onStock",
                    "type": "checkbox",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Na stanie",
                    "className": "form-check-label",
                    "htmlFor": "bookOnStock",
                  },
                  "ref": null,
                  "rendered": "Na stanie",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <textarea
                  className="form-control"
                  id="image"
                  name="image"
                  placeholder="Zdjęcie książki"
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "image",
                  "name": "image",
                  "placeholder": "Zdjęcie książki",
                },
                "ref": null,
                "rendered": null,
                "type": "textarea",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Dodaj",
                "className": "btn btn-primary",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Dodaj",
              "type": "button",
            },
          ],
          "type": "form",
        },
        "fgdfg",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`adminpanel test snapshot matches 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AdminPanel />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          panel admina
        </h2>,
        <form
          onSubmit={[Function]}
        >
          <div
            className="form-group"
          >
            <input
              className="form-control"
              id="name"
              name="bookname"
              onChange={[Function]}
              placeholder="Nazwa książki"
              type="text"
              value=""
            />
          </div>
          <div
            className="form-group"
          >
            <input
              className="form-control"
              id="author"
              name="author"
              onChange={[Function]}
              placeholder="Autor książki"
              type="text"
              value=""
            />
          </div>
          <div
            className="form-group"
          >
            <textarea
              className="form-control"
              id="description"
              name="description"
              onChange={[Function]}
              placeholder="Opis książki"
              value=""
            />
          </div>
          <div
            className="form-group"
          >
            <input
              className="form-check-input"
              id="onStock"
              name="onStock"
              onChange={[Function]}
              type="checkbox"
              value={true}
            />
            <label
              className="form-check-label"
              htmlFor="bookOnStock"
            >
              Na stanie
            </label>
          </div>
          <div
            className="form-group"
          >
            <textarea
              className="form-control"
              id="image"
              name="image"
              onChange={[Function]}
              placeholder="Zdjęcie książki"
              value=""
            />
          </div>
          <button
            className="btn btn-primary"
            type="submit"
          >
            Dodaj
          </button>
        </form>,
      ],
      "className": "adminpanel col-md-4",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "panel admina",
        },
        "ref": null,
        "rendered": "panel admina",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="name"
                name="bookname"
                onChange={[Function]}
                placeholder="Nazwa książki"
                type="text"
                value=""
              />
            </div>,
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="author"
                name="author"
                onChange={[Function]}
                placeholder="Autor książki"
                type="text"
                value=""
              />
            </div>,
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="description"
                name="description"
                onChange={[Function]}
                placeholder="Opis książki"
                value=""
              />
            </div>,
            <div
              className="form-group"
            >
              <input
                className="form-check-input"
                id="onStock"
                name="onStock"
                onChange={[Function]}
                type="checkbox"
                value={true}
              />
              <label
                className="form-check-label"
                htmlFor="bookOnStock"
              >
                Na stanie
              </label>
            </div>,
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="image"
                name="image"
                onChange={[Function]}
                placeholder="Zdjęcie książki"
                value=""
              />
            </div>,
            <button
              className="btn btn-primary"
              type="submit"
            >
              Dodaj
            </button>,
          ],
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                className="form-control"
                id="name"
                name="bookname"
                onChange={[Function]}
                placeholder="Nazwa książki"
                type="text"
                value=""
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "name",
                "name": "bookname",
                "onChange": [Function],
                "placeholder": "Nazwa książki",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <input
                className="form-control"
                id="author"
                name="author"
                onChange={[Function]}
                placeholder="Autor książki"
                type="text"
                value=""
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "author",
                "name": "author",
                "onChange": [Function],
                "placeholder": "Autor książki",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <textarea
                className="form-control"
                id="description"
                name="description"
                onChange={[Function]}
                placeholder="Opis książki"
                value=""
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "description",
                "name": "description",
                "onChange": [Function],
                "placeholder": "Opis książki",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <input
                  className="form-check-input"
                  id="onStock"
                  name="onStock"
                  onChange={[Function]}
                  type="checkbox"
                  value={true}
                />,
                <label
                  className="form-check-label"
                  htmlFor="bookOnStock"
                >
                  Na stanie
                </label>,
              ],
              "className": "form-group",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-check-input",
                  "id": "onStock",
                  "name": "onStock",
                  "onChange": [Function],
                  "type": "checkbox",
                  "value": true,
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Na stanie",
                  "className": "form-check-label",
                  "htmlFor": "bookOnStock",
                },
                "ref": null,
                "rendered": "Na stanie",
                "type": "label",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <textarea
                className="form-control"
                id="image"
                name="image"
                onChange={[Function]}
                placeholder="Zdjęcie książki"
                value=""
              />,
              "className": "form-group",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-control",
                "id": "image",
                "name": "image",
                "onChange": [Function],
                "placeholder": "Zdjęcie książki",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Dodaj",
              "className": "btn btn-primary",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Dodaj",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            panel admina
          </h2>,
          <form
            onSubmit={[Function]}
          >
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="name"
                name="bookname"
                onChange={[Function]}
                placeholder="Nazwa książki"
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <input
                className="form-control"
                id="author"
                name="author"
                onChange={[Function]}
                placeholder="Autor książki"
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="description"
                name="description"
                onChange={[Function]}
                placeholder="Opis książki"
                value=""
              />
            </div>
            <div
              className="form-group"
            >
              <input
                className="form-check-input"
                id="onStock"
                name="onStock"
                onChange={[Function]}
                type="checkbox"
                value={true}
              />
              <label
                className="form-check-label"
                htmlFor="bookOnStock"
              >
                Na stanie
              </label>
            </div>
            <div
              className="form-group"
            >
              <textarea
                className="form-control"
                id="image"
                name="image"
                onChange={[Function]}
                placeholder="Zdjęcie książki"
                value=""
              />
            </div>
            <button
              className="btn btn-primary"
              type="submit"
            >
              Dodaj
            </button>
          </form>,
        ],
        "className": "adminpanel col-md-4",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "panel admina",
          },
          "ref": null,
          "rendered": "panel admina",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="form-group"
              >
                <input
                  className="form-control"
                  id="name"
                  name="bookname"
                  onChange={[Function]}
                  placeholder="Nazwa książki"
                  type="text"
                  value=""
                />
              </div>,
              <div
                className="form-group"
              >
                <input
                  className="form-control"
                  id="author"
                  name="author"
                  onChange={[Function]}
                  placeholder="Autor książki"
                  type="text"
                  value=""
                />
              </div>,
              <div
                className="form-group"
              >
                <textarea
                  className="form-control"
                  id="description"
                  name="description"
                  onChange={[Function]}
                  placeholder="Opis książki"
                  value=""
                />
              </div>,
              <div
                className="form-group"
              >
                <input
                  className="form-check-input"
                  id="onStock"
                  name="onStock"
                  onChange={[Function]}
                  type="checkbox"
                  value={true}
                />
                <label
                  className="form-check-label"
                  htmlFor="bookOnStock"
                >
                  Na stanie
                </label>
              </div>,
              <div
                className="form-group"
              >
                <textarea
                  className="form-control"
                  id="image"
                  name="image"
                  onChange={[Function]}
                  placeholder="Zdjęcie książki"
                  value=""
                />
              </div>,
              <button
                className="btn btn-primary"
                type="submit"
              >
                Dodaj
              </button>,
            ],
            "onSubmit": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  className="form-control"
                  id="name"
                  name="bookname"
                  onChange={[Function]}
                  placeholder="Nazwa książki"
                  type="text"
                  value=""
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "name",
                  "name": "bookname",
                  "onChange": [Function],
                  "placeholder": "Nazwa książki",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <input
                  className="form-control"
                  id="author"
                  name="author"
                  onChange={[Function]}
                  placeholder="Autor książki"
                  type="text"
                  value=""
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "author",
                  "name": "author",
                  "onChange": [Function],
                  "placeholder": "Autor książki",
                  "type": "text",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "input",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <textarea
                  className="form-control"
                  id="description"
                  name="description"
                  onChange={[Function]}
                  placeholder="Opis książki"
                  value=""
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "description",
                  "name": "description",
                  "onChange": [Function],
                  "placeholder": "Opis książki",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "textarea",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    className="form-check-input"
                    id="onStock"
                    name="onStock"
                    onChange={[Function]}
                    type="checkbox"
                    value={true}
                  />,
                  <label
                    className="form-check-label"
                    htmlFor="bookOnStock"
                  >
                    Na stanie
                  </label>,
                ],
                "className": "form-group",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "form-check-input",
                    "id": "onStock",
                    "name": "onStock",
                    "onChange": [Function],
                    "type": "checkbox",
                    "value": true,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Na stanie",
                    "className": "form-check-label",
                    "htmlFor": "bookOnStock",
                  },
                  "ref": null,
                  "rendered": "Na stanie",
                  "type": "label",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <textarea
                  className="form-control"
                  id="image"
                  name="image"
                  onChange={[Function]}
                  placeholder="Zdjęcie książki"
                  value=""
                />,
                "className": "form-group",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "form-control",
                  "id": "image",
                  "name": "image",
                  "onChange": [Function],
                  "placeholder": "Zdjęcie książki",
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": "textarea",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Dodaj",
                "className": "btn btn-primary",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Dodaj",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
